# pricing-catalog-service-fastapi

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7988495003a5_initial_creating_all_model.py  7cdb144c2820_fix_settings_column_to_use_jsonb.py
app/: main.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: configurable_option.py  configurable_option_choice.py  configurable_option_cycles.py  currency.py  health.py  product.py  product_cycle.py  product_group.py
app/constants/: enums.py
app/core/: config.py  event_router.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  configurable_option.py  configurable_option_choice.py  configurable_option_cycle.py  currency.py  flavor_mirror.py  product.py  product_configurable_options.py  product_cycle.py  product_group.py
app/repositories/: configurable_option_choice_repository.py  configurable_option_cycle_repository.py  configurable_option_repository.py  currency_repository.py  pricing_repository.py  product_cycle_repository.py  product_group_repository.py  product_repository.py
app/schemas/: configurable_option.py  configurable_option_choice.py  configurable_option_cycle.py  currency.py  product.py  product_cycle.py  product_expose.py  product_group.py
app/services/: pricing_service.py
